[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nqlib"
version = "0.4.0"
authors = [
  { name="knttnk" },
]
description = "NQLib: Library to design noise shaping quantizer for discrete-valued input control."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  'scipy',
  'cvxpy',
  "control[slycot]",
]


[project.urls]
"Homepage" = "https://github.com/knttnk/NQLib"