[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nqlib"
version = "0.5.1"
authors = [{ name = "knttnk" }]
keywords = [
  "discrete-valued input control",
  "control theory",
  "quantizer",
  "control system design",
  "quantization",
  "simulation",
]
description = "NQLib: Library to design noise shaping quantizer for discrete-valued input control."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ['numpy', 'scipy', 'slycot', 'control', 'cvxpy']


[project.urls]
"Homepage" = "https://github.com/knttnk/NQLib"
