[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nqlib"
version = "1.0.0"
authors = [{ name = "knttnk" }]
keywords = [
  "discrete-valued input control",
  "control theory",
  "quantizer",
  "control system design",
  "quantization",
  "simulation",
]
description = "NQLib: Library to design noise shaping quantizer for discrete-valued input control."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]
dependencies = ['numpy', 'scipy>=1.10.1', 'slycot', 'control', 'cvxpy']

[project.urls]
"Homepage" = "https://github.com/knttnk/NQLib"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--doctest-modules"]
testpaths = ["tests", "src/nqlib"]
